src/test/deca/context/valid/obj/declfield/test_init_convfloat.deca
// Description:
//    initialisation d un float avec int
//
// Resultats:
//  Convloat et initialisation reussie
//
// Historique:
//    cree le 01/01/2024



class A {
    float a = 5;
}
